// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass on fixtures/rules/best-practices/best-practices.js 1`] = `
Array [
  Object {
    "column": 22,
    "line": 19,
    "rule": "array-callback-return",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 70,
    "rule": "curly",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 85,
    "rule": "default-case",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 109,
    "rule": "dot-location",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 125,
    "rule": "dot-notation",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 139,
    "rule": "eqeqeq",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 139,
    "rule": "eqeqeq",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 175,
    "rule": "no-caller",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 187,
    "rule": "no-case-declarations",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 220,
    "rule": "no-else-return",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 247,
    "rule": "no-empty-pattern",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 269,
    "rule": "no-eval",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 274,
    "rule": "no-extend-native",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 282,
    "rule": "no-extra-bind",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 299,
    "rule": "no-fallthrough",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 326,
    "rule": "no-floating-decimal",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 336,
    "rule": "no-global-assign",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 350,
    "rule": "no-implied-eval",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 363,
    "rule": "no-invalid-this",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 375,
    "rule": "no-iterator",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 382,
    "rule": "no-labels",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 383,
    "rule": "no-labels",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 391,
    "rule": "no-lone-blocks",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 408,
    "rule": "no-loop-func",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 426,
    "rule": "no-multi-spaces",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 430,
    "rule": "no-multi-spaces",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 452,
    "rule": "no-new",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 459,
    "rule": "no-new-func",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 470,
    "rule": "no-new-wrappers",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 498,
    "rule": "no-proto",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 511,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 512,
    "rule": "no-restricted-properties",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 530,
    "rule": "no-return-assign",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 554,
    "rule": "no-script-url",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 562,
    "rule": "no-self-assign",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 571,
    "rule": "no-self-compare",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 580,
    "rule": "no-sequences",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 589,
    "rule": "no-throw-literal",
    "severity": 2,
  },
  Object {
    "column": 12,
    "line": 603,
    "rule": "no-unmodified-loop-condition",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 614,
    "rule": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 627,
    "rule": "no-useless-call",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 640,
    "rule": "no-useless-concat",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 656,
    "rule": "no-useless-escape",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 670,
    "rule": "no-useless-return",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 688,
    "rule": "no-void",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 695,
    "rule": "no-warning-comments",
    "severity": 1,
  },
  Object {
    "column": 54,
    "line": 706,
    "rule": "prefer-promise-reject-errors",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 717,
    "rule": "radix",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 736,
    "rule": "wrap-iife",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 754,
    "rule": "yoda",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/best-practices/best-practices-non-strict.js 1`] = `
Array [
  Object {
    "column": 17,
    "line": 7,
    "rule": "no-octal",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 18,
    "rule": "no-octal-escape",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 32,
    "rule": "no-with",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/best-practices/es8/best-practices.js 1`] = `
Array [
  Object {
    "column": 16,
    "line": 8,
    "rule": "no-return-await",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/best-practices/no-implicit-globals/no-implicit-globals.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 5,
    "rule": "no-implicit-globals",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/errors/errors.js 1`] = `
Array [
  Object {
    "column": 9,
    "line": 16,
    "rule": "no-compare-neg-zero",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 35,
    "rule": "no-cond-assign",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 67,
    "rule": "no-constant-condition",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 84,
    "rule": "no-control-regex",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 92,
    "rule": "no-debugger",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 98,
    "rule": "no-dupe-args",
    "severity": 2,
  },
  Object {
    "column": 21,
    "line": 98,
    "rule": "no-redeclare",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 114,
    "rule": "no-dupe-keys",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 132,
    "rule": "no-duplicate-case",
    "severity": 2,
  },
  Object {
    "column": 26,
    "line": 156,
    "rule": "no-empty",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 167,
    "rule": "no-empty-character-class",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 184,
    "rule": "no-extra-boolean-cast",
    "severity": 2,
  },
  Object {
    "column": 6,
    "line": 201,
    "rule": "no-extra-parens",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 218,
    "rule": "no-extra-semi",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 227,
    "rule": "no-func-assign",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 245,
    "rule": "no-inner-declarations",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 261,
    "rule": "no-invalid-regexp",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 274,
    "rule": "new-cap",
    "severity": 2,
  },
  Object {
    "column": 13,
    "line": 274,
    "rule": "no-obj-calls",
    "severity": 2,
  },
  Object {
    "column": 47,
    "line": 283,
    "rule": "no-prototype-builtins",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 297,
    "rule": "no-regex-spaces",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 307,
    "rule": "no-sparse-arrays",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 307,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 314,
    "rule": "no-template-curly-in-string",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 327,
    "rule": "no-unreachable",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 344,
    "rule": "no-unsafe-finally",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 351,
    "rule": "no-unsafe-negation",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 362,
    "rule": "use-isnan",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 377,
    "rule": "valid-typeof",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/errors/es8/errors.js 1`] = `
Array [
  Object {
    "column": 20,
    "line": 15,
    "rule": "no-await-in-loop",
    "severity": 1,
  },
]
`;

exports[`should pass on fixtures/rules/jsdoc/jsdoc.js 1`] = `
Array [
  Object {
    "column": 5,
    "line": 5,
    "rule": "jsdoc/require-param",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "jsdoc/require-param",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 6,
    "rule": "jsdoc/newline-after-description",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 7,
    "rule": "jsdoc/check-param-names",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 7,
    "rule": "jsdoc/check-types",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 7,
    "rule": "jsdoc/require-hyphen-before-param-description",
    "severity": 2,
  },
  Object {
    "column": NaN,
    "line": 8,
    "rule": "jsdoc/require-returns-type",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/strict/strict.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 4,
    "rule": "strict",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 5,
    "rule": "strict",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/style/style.js 1`] = `
Array [
  Object {
    "column": 8,
    "line": 9,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 9,
    "rule": "array-bracket-spacing",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 19,
    "rule": "block-spacing",
    "severity": 2,
  },
  Object {
    "column": 38,
    "line": 19,
    "rule": "block-spacing",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 31,
    "rule": "brace-style",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 43,
    "rule": "camelcase",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 54,
    "rule": "capitalized-comments",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 146,
    "rule": "comma-dangle",
    "severity": 2,
  },
  Object {
    "column": 32,
    "line": 161,
    "rule": "comma-spacing",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 174,
    "rule": "comma-style",
    "severity": 2,
  },
  Object {
    "column": 18,
    "line": 192,
    "rule": "computed-property-spacing",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 210,
    "rule": "consistent-this",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 235,
    "rule": "func-call-spacing",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 269,
    "rule": "func-style",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 269,
    "rule": "semi",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 300,
    "rule": "indent",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 326,
    "rule": "key-spacing",
    "severity": 2,
  },
  Object {
    "column": 6,
    "line": 342,
    "rule": "keyword-spacing",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 380,
    "rule": "lines-around-directive",
    "severity": 2,
  },
  Object {
    "column": 25,
    "line": 399,
    "rule": "max-depth",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 425,
    "rule": "max-len",
    "severity": 1,
  },
  Object {
    "column": 27,
    "line": 456,
    "rule": "max-nested-callbacks",
    "severity": 1,
  },
  Object {
    "column": 31,
    "line": 457,
    "rule": "max-nested-callbacks",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 472,
    "rule": "max-params",
    "severity": 1,
  },
  Object {
    "column": 5,
    "line": 487,
    "rule": "max-statements",
    "severity": 1,
  },
  Object {
    "column": 47,
    "line": 656,
    "rule": "max-statements-per-line",
    "severity": 2,
  },
  Object {
    "column": 28,
    "line": 687,
    "rule": "new-cap",
    "severity": 2,
  },
  Object {
    "column": 24,
    "line": 702,
    "rule": "new-parens",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 717,
    "rule": "padding-line-between-statements",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 733,
    "rule": "padding-line-between-statements",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 755,
    "rule": "no-array-constructor",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 768,
    "rule": "no-bitwise",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 801,
    "rule": "no-lonely-if",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 816,
    "rule": "no-mixed-operators",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 816,
    "rule": "no-mixed-operators",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 840,
    "rule": "no-multiple-empty-lines",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 861,
    "rule": "no-nested-ternary",
    "severity": 2,
  },
  Object {
    "column": 44,
    "line": 861,
    "rule": "no-nested-ternary",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 884,
    "rule": "no-new-object",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 900,
    "rule": "no-plusplus",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 945,
    "rule": "no-unneeded-ternary",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 959,
    "rule": "no-whitespace-before-property",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 999,
    "rule": "object-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 20,
    "line": 999,
    "rule": "object-curly-spacing",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1011,
    "rule": "object-property-newline",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 1035,
    "rule": "one-var",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 1068,
    "rule": "operator-linebreak",
    "severity": 2,
  },
  Object {
    "column": 30,
    "line": 1080,
    "rule": "padded-blocks",
    "severity": 2,
  },
  Object {
    "column": 5,
    "line": 1084,
    "rule": "padded-blocks",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 1099,
    "rule": "quote-props",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1115,
    "rule": "quotes",
    "severity": 2,
  },
  Object {
    "column": 23,
    "line": 1131,
    "rule": "semi",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 1142,
    "rule": "semi-spacing",
    "severity": 2,
  },
  Object {
    "column": 17,
    "line": 1171,
    "rule": "space-before-blocks",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 1186,
    "rule": "space-before-function-paren",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 1201,
    "rule": "space-in-parens",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 1201,
    "rule": "space-in-parens",
    "severity": 2,
  },
  Object {
    "column": 16,
    "line": 1216,
    "rule": "space-infix-ops",
    "severity": 2,
  },
  Object {
    "column": 7,
    "line": 1226,
    "rule": "space-unary-ops",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 1233,
    "rule": "spaced-comment",
    "severity": 2,
  },
  Object {
    "column": 1,
    "line": 1234,
    "rule": "spaced-comment",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 1245,
    "rule": "template-tag-spacing",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/style/style-lines.js 1`] = `
Array [
  Object {
    "column": 1,
    "line": 1,
    "rule": "max-lines",
    "severity": 1,
  },
  Object {
    "column": 1,
    "line": 4,
    "rule": "strict",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/variables/variables.js 1`] = `
Array [
  Object {
    "column": 5,
    "line": 27,
    "rule": "no-delete-var",
    "severity": 2,
  },
  Object {
    "column": 14,
    "line": 49,
    "rule": "no-shadow-restricted-names",
    "severity": 2,
  },
  Object {
    "column": 15,
    "line": 56,
    "rule": "no-undef",
    "severity": 2,
  },
  Object {
    "column": 9,
    "line": 63,
    "rule": "no-undef-init",
    "severity": 2,
  },
  Object {
    "column": 11,
    "line": 81,
    "rule": "no-use-before-define",
    "severity": 2,
  },
  Object {
    "column": 19,
    "line": 93,
    "rule": "no-use-before-define",
    "severity": 2,
  },
]
`;

exports[`should pass on fixtures/rules/variables/variables-with-unused.js 1`] = `
Array [
  Object {
    "column": 11,
    "line": 10,
    "rule": "no-unused-vars",
    "severity": 2,
  },
]
`;
